add div element

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 change this.
 <h1>Header Here</h1>
 <body>
+  <div>This is a section of the body above the main content.</div>
   This is the body of the commit.
 </body>
